Fix the corner case for new audio device is not selected as active if it is plugged in for the first time after cros device is powered down.

BUG=622045

Review-Url: https://codereview.chromium.org/2189463004
Cr-Commit-Position: refs/heads/master@{#408431}

Former-commit-id: 6d5579b510fe8dcc6efb7ea1b6e881f840aa7f87